--- a/contact.html
+++ b/contact.html
@@ -131,7 +131,7 @@ Author URL: http://w3layouts.com
                             </div>
                             <div class="cont-right">
                                 <h6>Our head office address:</h6>
-                                <p>Lorem ipsum Agency, 343 marketing, #4148 Honey street, NY - 62617.</p>
+                                <p>Agency, 343 marketing, #4148 Honey street, NY - 62617.</p>
                             </div>
                         </div>
                         <div class="cont-top margin-up">
@@ -140,8 +140,8 @@ Author URL: http://w3layouts.com
                             </div>
                             <div class="cont-right">
                                 <h6>Call for help :</h6>
-                                <p><a href="tel:+1(21) 234 4567">+1(21) 234 557 4567</a></p>
-                                <p><a href="tel:+1(21) 234 4567">+1(21) 234 557 4568</a></p>
+                                <p><a href="tel:+1(21) 234 4567">+(92) xxx xxxx</a></p>
+                                
                             </div>
                         </div>
                         <div class="cont-top margin-up">
@@ -188,9 +188,9 @@ Author URL: http://w3layouts.com
                         <h6 class="footer-title-29">Address</h6>
                         <div class="footer-listw3-grids">
                             <ul class="footer-listw3">
-                                <li>London, UK</li>
+                                <li>Multan, PK</li>
                                 <li>998 13h Street, Office 436</li>
-                                <li>Harlo 61466</li>
+                                <li>Chock Kumharan</li>
                             </ul>
 
                         </div>
@@ -200,7 +200,7 @@ Author URL: http://w3layouts.com
                         <h6 class="footer-title-29">Say hello</h6>
                         <div class="footer-listw3-grids">
                             <ul class="footer-listw3">
-                                <li><a href="tel:+(21) 255 999 8888">+(21) 255 999 8888</a></li>
+                                <li><a href="tel:+(92) 300 xxx xxxxx">+(92) 300 xxx xxxxx</a></li>
                                 <li><a href="mailto:Workcore@mail.com" class="mail">Workcore@mail.com</a></li>
 
                             </ul>
@@ -236,7 +236,7 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="bottom-copies text-center">
-                    <p class="copy-footer-29">© 2021 WorkCore. All rights reserved | Designed by <a href="https://w3layouts.com">W3layouts</a></p>
+                    <p class="copy-footer-29">© 2023 WorkCore. All rights reserved | Designed by <a href="index.html">WorkCore Team</a></p>
                 </div>
             </div>
         </div>
