--- a/about.html
+++ b/about.html
@@ -123,9 +123,7 @@ Author URL: http://w3layouts.com
                 </div>
 
                 <div class="col-lg-6 mt-lg-0 mt-md-5 mt-4 ps-lg-5">
-                    <p class="">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                        ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet
-                        elit ipsum dolor.</p>
+                    <p class="">Marketing automation software, which can help with email campaigns, social media management, and lead generation.</p>
                 </div>
             </div>
             <!--//row-1-->
@@ -134,18 +132,14 @@ Author URL: http://w3layouts.com
                     <div class="abw3-info">
                         <img src="assets/images/banner5.jpg" alt="" class="img-fluid radius-image">
                         <h3 class="title-w3l mt-4 mb-2">Our Approach</h3>
-                        <p class="">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                            ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet
-                            elit ipsum dolor.</p>
+                        <p class="">CRM software, which can help manage customer interactions and relationships.</p>
                     </div>
                 </div>
                 <div class="col-md-6 mt-md-0 mt-4">
                     <div class="abw3-info">
                         <img src="assets/images/banner1.jpg" alt="" class="img-fluid radius-image">
                         <h3 class="title-w3l mt-4 mb-2">Our Mission</h3>
-                        <p class="">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                            ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet
-                            elit ipsum dolor.</p>
+                        <p class="">Cloud-based storage solutions, which can help businesses access and share files remotely.</p>
                     </div>
                 </div>
 
@@ -267,9 +261,7 @@ Author URL: http://w3layouts.com
                                 <h5 class="title-subw3hny mb-3">Invite Your Friends</h5>
                                 <h3 class="title-w3l two mb-3">Refer and Get Free Services
                                 </h3>
-                                <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit
-                                    amet. Lorem ipsum
-                                    dolor sit amet elit.</p>
+                                <p>Many businesses offer referral programs as a way to promote their services and acquire new customers. Under this program, existing customers can refer friends or family to the business, and in return, they can receive discounts, free services, or other rewards.</p>
                             </div>
                         </div>
                     </div>
@@ -293,9 +285,7 @@ Author URL: http://w3layouts.com
                     <h6 class="title-subw3hny mb-1">Why Us</h6>
                     <h3 class="title-w3l mb-3">
                         Modern Approach to Every New Project</h3>
-                    <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non ipsum soluta
-                        perferendis
-                        veniam qui esse magnam commodi quisquam.</p>
+                    <p class="mb-3">E-commerce platforms, which can help businesses sell products online.</p>
                     <ul class="icon-list-items mt-3">
                         <li class="icon-list-item">
                             <i aria-hidden="true" class="fas fa-check"></i>
@@ -345,9 +335,9 @@ Author URL: http://w3layouts.com
                         <h6 class="footer-title-29">Address</h6>
                         <div class="footer-listw3-grids">
                             <ul class="footer-listw3">
-                                <li>London, UK</li>
+                                <li>Multan, PK</li>
                                 <li>998 13h Street, Office 436</li>
-                                <li>Harlo 61466</li>
+                                <li>Chock Kumharan</li>
                             </ul>
 
                         </div>
@@ -357,7 +347,7 @@ Author URL: http://w3layouts.com
                         <h6 class="footer-title-29">Say hello</h6>
                         <div class="footer-listw3-grids">
                             <ul class="footer-listw3">
-                                <li><a href="tel:+(21) 255 999 8888">+(21) 255 999 8888</a></li>
+                                <li><a href="tel:+(92) 300 xxx xxxxx">+(92) 300 xxx xxxxx</a></li>
                                 <li><a href="mailto:Workcore@mail.com" class="mail">Workcore@mail.com</a></li>
 
                             </ul>
@@ -393,7 +383,7 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="bottom-copies text-center">
-                    <p class="copy-footer-29">© 2021 WorkCore. All rights reserved | Designed by <a href="https://w3layouts.com">W3layouts</a></p>
+                    <p class="copy-footer-29">© 2023 WorkCore. All rights reserved | Designed by <a href="index.html">WorkCore Team</a></p>
                 </div>
             </div>
         </div>
