--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Author URL: http://w3layouts.com
                     <!--/search-right-->
                     <ul class="header-search me-lg-4">
                         <li class="get-btn">
-                            <a href="contact.html" class="btn btn-style btn-primary" title="search">Get Started <i class="fas fa-arrow-right ms-lg-4 ms-2"></i></a>
+                            <a href="Login.html" class="btn btn-style btn-primary" title="search">Login<i class="fas fa-arrow-right ms-lg-4 ms-2"></i></a>
                         </li>
 
                     </ul>
@@ -118,14 +118,11 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="col-lg-4 mt-lg-0 mt-md-5 mt-4 ps-lg-4">
-                    <p class="">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                        ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet
-                        elit ipsum dolor.</p>
+                    <p class="">"Success is not final; failure is not fatal: it is the courage to continue that counts."</p>
                 </div>
                 <div class="col-lg-4 mt-lg-0 mt-md-5 mt-4 ps-lg-4">
-                    <p class="">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                        ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet
-                        elit ipsum dolor.</p>
+                    <p class="">"Business opportunities are like buses, there's always another one coming.”
+                        </p>
                 </div>
             </div>
             <!--//row-1-->
@@ -191,7 +188,7 @@ Author URL: http://w3layouts.com
                                 <i class="fas fa-bullhorn"></i>
                             </div>
                             <h4><a href="#service" class="title-head mb-3">Profitable Marketing</a></h4>
-                            <p class="text-para">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam. </p>
+                            <p class="text-para">This can be achieved by effectively identifying target markets & developing effective marketing strategies. </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mt-md-0 mt-5">
@@ -200,7 +197,7 @@ Author URL: http://w3layouts.com
                                 <i class="fas fa-toolbox"></i>
                             </div>
                             <h4><a href="#service" class="title-head mb-3">SEO Specialists</a></h4>
-                            <p class="text-para">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam. </p>
+                            <p class="text-para">SEO specialists work to increase organic traffic to a website and improve the overall online presence. </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-6 mt-lg-0 mt-5">
@@ -209,7 +206,7 @@ Author URL: http://w3layouts.com
                                 <i class="fas fa-podcast"></i>
                             </div>
                             <h4><a href="#service" class="title-head mb-3">Audience Analysis</a></h4>
-                            <p class="text-para">Lorem ipsum dolor sit amet, elit. Id ab commodi magnam. </p>
+                            <p class="text-para">Studying and understanding the characteristics, needs, and behaviors of a specific group of people. </p>
                         </div>
                     </div>
                 </div>
@@ -236,9 +233,7 @@ Author URL: http://w3layouts.com
                     <h6 class="title-subw3hny mb-1">Why Us</h6>
                     <h3 class="title-w3l mb-3">
                         Modern Approach to Every New Project</h3>
-                    <p class="mb-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla non ipsum soluta
-                        perferendis
-                        veniam qui esse magnam commodi quisquam.</p>
+                    <p class="mb-3">It typically involves incorporating a variety of best practices and methodologies to ensure success.</p>
                     <ul class="icon-list-items mt-3">
                         <li class="icon-list-item">
                             <i aria-hidden="true" class="fas fa-check"></i>
@@ -303,7 +298,7 @@ Author URL: http://w3layouts.com
                                 <div class="price-review d-flex justify-content-between mb-1 align-items-center">
                                     <p>News</p>
                                 </div>
-                                <a href="#blog-single" class="blog-desc">
+                                <a href="blog.html" class="blog-desc">
                                     How to Win The Customers` Appreciation & Loyalty</a>
                             </div>
                             <div class="card-footer">
@@ -334,7 +329,7 @@ Author URL: http://w3layouts.com
                                 <div class="price-review d-flex justify-content-between mb-1 align-items-center">
                                     <p>News</p>
                                 </div>
-                                <a href="#blog-single" class="blog-desc">
+                                <a href="blog1.html" class="blog-desc">
                                     Targeted Marketing for Business School Students</a>
                             </div>
                             <div class="card-footer">
@@ -365,7 +360,7 @@ Author URL: http://w3layouts.com
                                 <div class="price-review d-flex justify-content-between mb-1 align-items-center">
                                     <p>News</p>
                                 </div>
-                                <a href="#blog-single" class="blog-desc">
+                                <a href="blog2.html" class="blog-desc">
                                     What You Must Know Making Investments Today</a>
                             </div>
                             <div class="card-footer">
@@ -398,8 +393,7 @@ Author URL: http://w3layouts.com
                     <div class="title-content text-left p-xl-3">
                         <h6 class="title-subw3hny">Reviews</h6>
                         <h3 class="title-w3l two">What Our Clients Say</h3>
-                        <p class="test-p mt-3">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                            ultrices in ligula. Semper at tempufddfel.
+                        <p class="test-p mt-3">Happy customers and their experience working with a Hubspot Partner Inbound Marketing Agency.
                         </p>
                     </div>
                 </div>
@@ -409,14 +403,13 @@ Author URL: http://w3layouts.com
                             <div class="testimonial-content">
                                 <div class="testimonial">
 
-                                    <p><i class="fas fa-quote-left me-2"></i> Lorem ipsum dolor sit amet elit. hic odio tenetur. ante ipsum primis in
-                                        faucibus orci luctus et ultrices posuere.</p>
+                                    <p><i class="fas fa-quote-left me-2"></i> Tangible Words services are 100% professional, timely, proficient, and delivered in accordance with each project's budget.</p>
                                 </div>
                                 <div class="bottom-info mt-4">
                                     <a class="comment-img" href="#url"><img src="assets/images/team1.jpg" class="img-fluid radius-image" alt="placeholder image"></a>
                                     <div class="people-info align-self">
                                         <h3>Johnson william</h3>
-                                        <p class="identity">Example City</p>
+                                        <p class="identity">CEO, Quinte Economic Development Commission</p>
                                     </div>
                                 </div>
                             </div>
@@ -424,14 +417,15 @@ Author URL: http://w3layouts.com
                           <div class="col-md-6 item">
                             <div class="testimonial-content">
                                 <div class="testimonial">
-                                    <p><i class="fas fa-quote-left me-2"></i> Lorem ipsum dolor sit amet elit. hic odio tenetur. ante ipsum primis in
-                                        faucibus orci luctus et ultrices posuere.</p>
+                                    <p><i class="fas fa-quote-left me-2"></i> Constant communication, attentive and
+                                        timely customer service.
+                                        Proper writing for the medium.</p>
                                 </div>
                                 <div class="bottom-info mt-4">
                                     <a class="comment-img" href="#url"><img src="assets/images/team2.jpg" class="img-fluid radius-image" alt="placeholder image"></a>
                                     <div class="people-info align-self">
                                         <h3>Alexander sakura</h3>
-                                        <p class="identity">Example City</p>
+                                        <p class="identity">Executive Vice-President, MDB Insight</p>
                                     </div>
                                 </div>
                             </div>
@@ -446,16 +440,15 @@ Author URL: http://w3layouts.com
     <footer class="w3l-footer-29-main">
         <div class="footer-29 py-5">
             <div class="container py-lg-4">
-                <h2>We protect & support<br>
-                    your business</h2>
+                <h2>We protect & support your business</h2>
                 <div class="row footer-top-29 mt-md-5 mt-4">
                     <div class="col-lg-3 col-md-6 footer-list-29 footer-1">
                         <h6 class="footer-title-29">Address</h6>
                         <div class="footer-listw3-grids">
                             <ul class="footer-listw3">
-                                <li>London, UK</li>
+                                <li>Multan, PK</li>
                                 <li>998 13h Street, Office 436</li>
-                                <li>Harlo 61466</li>
+                                <li>Chock Kumharan</li>
                             </ul>
 
                         </div>
@@ -465,7 +458,7 @@ Author URL: http://w3layouts.com
                         <h6 class="footer-title-29">Say hello</h6>
                         <div class="footer-listw3-grids">
                             <ul class="footer-listw3">
-                                <li><a href="tel:+(21) 255 999 8888">+(21) 255 999 8888</a></li>
+                                <li><a href="tel:+(92) 300 xxxxxxx"+(92) 300 xxxxxxx </a></li>
                                 <li><a href="mailto:Workcore@mail.com" class="mail">Workcore@mail.com</a></li>
 
                             </ul>
@@ -501,7 +494,7 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="bottom-copies text-center">
-                    <p class="copy-footer-29">© 2021 WorkCore. All rights reserved | Designed by <a href="https://w3layouts.com">W3layouts</a></p>
+                    <p class="copy-footer-29">© 2023 WorkCore. All rights reserved | Designed by <a href="index.html">Workcore Team</a></p>
                 </div>
             </div>
         </div>
