--- a/services.html
+++ b/services.html
@@ -125,9 +125,7 @@ Author URL: http://w3layouts.com
                         <h6 class="title-subw3hny mb-1">Services Info</h6>
                         <h3 class="title-w3l mb-3">The best solutions for your business </h3>
                     </div>
-                    <p class="">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo,
-                        ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet
-                        elit ipsum dolor.Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel tesque libero ut justo.</p>
+                    <p class=""> This type of program can be beneficial for both the business and the customer. The business can acquire new customers through word-of-mouth marketing, and the customer can save money or receive free services by referring others.</p>
                     <a href="#services" class="btn btn-style btn-primary mt-lg-5 mt-4">Read More <i class="fas fa-arrow-right ms-lg-4 ms-2"></i></a>
                 </div>
             </div>
@@ -142,7 +140,7 @@ Author URL: http://w3layouts.com
                 <div class="serve-title-header text-left">
                     <h6 class="title-subw3hny mb-1">What We Offer</h6>
                     <h3 class="title-w3l mb-3">We improve your online presence.</h3>
-                    <p class="pr-lg-5">Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at tempufddfel. Lorem ipsum dolor sit amet elit. Non quae, fugiat nihil ad. Lorem ipsum dolor sit amet.</p>
+                    <p class="pr-lg-5">It's important to have clear terms and conditions for the referral program, such as a minimum number of referrals needed to qualify for a reward, and to communicate the program clearly to customers.</p>
                 </div>
                 <div class="grids-of-5 row mt-5 text-center">
                     <div class="col-lg-4 col-md-6">
@@ -189,7 +187,7 @@ Author URL: http://w3layouts.com
                             <span class="fas fa-paint-brush"></span>
                         </div>
                         <h4><a href="#feature" class="title-head">Web Design</a></h4>
-                        <p>Lorem ipsum dolor sit amet elit. Velit beatae amet. </p>
+                        <p>Designing your website. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 grids-feature mt-md-0 mt-4">
@@ -198,7 +196,7 @@ Author URL: http://w3layouts.com
                             <span class="fas fa-podcast"></span>
                         </div>
                         <h4><a href="#feature" class="title-head">Brand Building</a></h4>
-                        <p>Lorem ipsum dolor sit amet elit. Velit beatae amet. </p>
+                        <p>Build a eyecatchy brand. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 grids-feature mt-lg-0 mt-4">
@@ -207,7 +205,7 @@ Author URL: http://w3layouts.com
                             <span class="fas fa-laptop"></span>
                         </div>
                         <h4><a href="#feature" class="title-head">App Dev</a></h4>
-                        <p>Lorem ipsum dolor sit amet elit. Velit beatae amet. </p>
+                        <p>Develop a userfriendly app. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 grids-feature mt-4">
@@ -216,7 +214,7 @@ Author URL: http://w3layouts.com
                             <span class="far fa-edit"></span>
                         </div>
                         <h4><a href="#feature" class="title-head">Clean Code</a></h4>
-                        <p>Lorem ipsum dolor sit amet elit. Velit beatae amet. </p>
+                        <p>Short Code that is best for a site. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 grids-feature mt-4">
@@ -225,7 +223,7 @@ Author URL: http://w3layouts.com
                             <span class="fas fa-mobile-alt"></span>
                         </div>
                         <h4><a href="#feature" class="title-head">Mobile apps</a></h4>
-                        <p>Lorem ipsum dolor sit amet elit. Velit beatae amet. </p>
+                        <p>Mobile App for your business.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 grids-feature mt-4">
@@ -234,7 +232,7 @@ Author URL: http://w3layouts.com
                             <span class="fas fa-american-sign-language-interpreting"></span>
                         </div>
                         <h4><a href="#feature" class="title-head">Retina Ready</a></h4>
-                        <p>Lorem ipsum dolor sit amet elit. Velit beatae amet. </p>
+                        <p>Retina ready for business. </p>
                     </div>
                 </div>
             </div>
@@ -252,9 +250,9 @@ Author URL: http://w3layouts.com
                         <h6 class="footer-title-29">Address</h6>
                         <div class="footer-listw3-grids">
                             <ul class="footer-listw3">
-                                <li>London, UK</li>
+                                <li>Multan, PK</li>
                                 <li>998 13h Street, Office 436</li>
-                                <li>Harlo 61466</li>
+                                <li>Chock Kumharan</li>
                             </ul>
 
                         </div>
@@ -264,7 +262,7 @@ Author URL: http://w3layouts.com
                         <h6 class="footer-title-29">Say hello</h6>
                         <div class="footer-listw3-grids">
                             <ul class="footer-listw3">
-                                <li><a href="tel:+(21) 255 999 8888">+(21) 255 999 8888</a></li>
+                                <li><a href="tel:+(92) 300 xxx xxxxx">+(92) 300 xxx xxxxx</a></li>
                                 <li><a href="mailto:Workcore@mail.com" class="mail">Workcore@mail.com</a></li>
 
                             </ul>
@@ -300,10 +298,11 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
                 <div class="bottom-copies text-center">
-                    <p class="copy-footer-29">© 2021 WorkCore. All rights reserved | Designed by <a href="https://w3layouts.com">W3layouts</a></p>
+                    <p class="copy-footer-29">© 2023 WorkCore. All rights reserved | Designed by <a href="index.html">WorkCore Team</a></p>
                 </div>
             </div>
         </div>
+
 
         <!-- move top -->
         <button onclick="topFunction()" id="movetop" title="Go to top">
